--- a/package.json
+++ b/package.json
@@ -11,8 +11,19 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/image": "^0.9.2",
+    "@astrojs/react": "^1.1.4",
+    "@astrojs/svelte": "^1.0.1",
     "@astrojs/tailwind": "^2.0.2",
+    "@headlessui/react": "^1.7.3",
     "astro": "^1.4.6",
+    "clsx": "^1.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sharp": "^0.31.1",
     "tailwindcss": "^3.1.8"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.21"
   }
 }
