--- a/package.json
+++ b/package.json
@@ -1,29 +1,39 @@
 {
-  "name": "@example/basics",
-  "type": "module",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/image": "^0.9.2",
-    "@astrojs/react": "^1.1.4",
-    "@astrojs/svelte": "^1.0.1",
-    "@astrojs/tailwind": "^2.0.2",
-    "@headlessui/react": "^1.7.3",
-    "astro": "^1.4.6",
-    "clsx": "^1.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sharp": "^0.31.1",
-    "tailwindcss": "^3.1.8"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.21"
-  }
+	"name": "website",
+	"type": "module",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"dev": "astro dev",
+		"start": "astro dev",
+		"build": "astro check && tsc --noEmit && astro build",
+		"preview": "astro preview",
+		"astro": "astro",
+		"typecheck": "tsc --noEmit",
+		"lint": "eslint \"src/**/*.{js,ts,astro}\"",
+		"format": "prettier -w ."
+	},
+	"dependencies": {
+		"@astrojs/image": "^0.9.2",
+		"@astrojs/react": "^1.1.4",
+		"@astrojs/tailwind": "^2.0.2",
+		"@headlessui/react": "^1.7.3",
+		"astro": "^1.4.6",
+		"clsx": "^1.2.1",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"sharp": "^0.31.1",
+		"tailwindcss": "^3.1.8"
+	},
+	"devDependencies": {
+		"@types/eslint": "^8.4.6",
+		"@types/prettier": "^2.7.1",
+		"@types/react": "^18.0.21",
+		"@typescript-eslint/parser": "^5.40.0",
+		"eslint": "^8.25.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-astro": "^0.20.0",
+		"prettier": "^2.7.1",
+		"prettier-plugin-astro": "^0.5.5"
+	}
 }
