--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"dependencies": {
 		"@astrojs/image": "^0.9.2",
 		"@astrojs/react": "^1.1.4",
+		"@astrojs/sitemap": "^1.0.0",
 		"@astrojs/tailwind": "^2.0.2",
 		"@headlessui/react": "^1.7.3",
 		"astro": "^1.4.6",
